# auto-mock-screenshots

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  mock_screenshots.py  pyproject.toml  setup.py
doc/: projects.json
mock_screenshots/: __init__.py  cli.py  core.py
